--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,9 +1,6 @@
 ---
 title: Perspectivas y contrastes
-output:
-  prettydoc::html_pretty:
-    theme: tactile
-    highlight: github
+output: html_document
 ---
 
 ```{r setup, include = FALSE}
