--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -113,6 +113,8 @@ Datos_nuevas_muertes <- max(nuevas_muertes, na.rm = FALSE)
 Datos_nuevas_muertes <- as.integer(Datos_nuevas_muertes)
 Datos_recuperados <- tail(total_recuperados$Recuperados, 1)
 Datos_recuperados <- as.integer(Datos_recuperados)
+
+gsub("<U+00F3>", "o", Lead_nuevos_casos)
     ```
 
 ## Covid-19: `r Titulo_nuevos_casos` `r format(Dato_nuevos_casos, digits=1, big.mark=" ")` nuevos contagios y los casos acumulados llegan a `r format(Dato_acumulado, digits=1, big.mark=" ")`
