--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -113,7 +113,7 @@ Datos_nuevas_muertes <- max(nuevas_muertes, na.rm = FALSE)
 Datos_nuevas_muertes <- as.integer(Datos_nuevas_muertes)
 Datos_recuperados <- tail(total_recuperados$Recuperados, 1)
 Datos_recuperados <- as.integer(Datos_recuperados)
-
+segun <- sprintf("según")
     ```
 
 ## Covid-19: `r Titulo_nuevos_casos` `r format(Dato_nuevos_casos, digits=1, big.mark=" ")` nuevos contagios y los casos acumulados llegan a `r format(Dato_acumulado, digits=1, big.mark=" ")`
@@ -121,7 +121,7 @@ Datos_recuperados <- as.integer(Datos_recuperados)
 `r paste0("Actualizado: ", Sys.time())`
 
 
-`r sprintf(Lead_nuevos_casos)` `r format(Dato_nuevos_casos, digits=1, big.mark=" ")` nuevos casos de coronavirus, `r sprintf("según")` los datos del reporte epidemiológico. De este modo, el acumulado de contagios confirmados asciende a `r format(Dato_acumulado, digits=1, big.mark=" ")`, de los cuales `r format(activos, digits=1, big.mark=" ")` se mantienen activos.
+`r sprintf(Lead_nuevos_casos)` `r format(Dato_nuevos_casos, digits=1, big.mark=" ")` nuevos casos de coronavirus, `r print("según")` los datos del reporte epidemiológico. De este modo, el acumulado de contagios confirmados asciende a `r format(Dato_acumulado, digits=1, big.mark=" ")`, de los cuales `r format(activos, digits=1, big.mark=" ")` se mantienen activos.
 
 Asimismo, se informó sobre `r format(Datos_nuevas_muertes, digits=1, big.mark=" ")` nuevos decesos a causa de esta enfermedad, con lo cual el total de fallecidos es de `r format(Dato_total_muertos, digits=1, big.mark=" ")`.
 
