--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -18,6 +18,7 @@ library(hrbrthemes)
 library(highcharter)
 library(httr)
 library(jsonlite)
+library(stringi)
 
 
 ##### Cargar datos
@@ -121,7 +122,7 @@ rio <- c(tilde, Encoding(tilde))
 
 `r paste0("Actualizado: ", Sys.time())`
 
-`r rio`
+`r stri_enc_toutf8(tilde, is_unknown_8bit = FALSE, validate = FALSE)`
 `r Lead_nuevos_casos` `r format(Dato_nuevos_casos, digits=1, big.mark=" ")` nuevos casos de coronavirus, según los datos del reporte epidemiológico. De este modo, el acumulado de contagios confirmados asciende a `r format(Dato_acumulado, digits=1, big.mark=" ")`, de los cuales `r format(activos, digits=1, big.mark=" ")` se mantienen activos.
 
 Asimismo, se informó sobre `r format(Datos_nuevas_muertes, digits=1, big.mark=" ")` nuevos decesos a causa de esta enfermedad, con lo cual el total de fallecidos es de `r format(Dato_total_muertos, digits=1, big.mark=" ")`.
